--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">dcc.onde.go.th</domain>
         <domain includeSubdomains="true">decms.dcc.onde.go.th</domain>
         <domain includeSubdomains="true">console.dcc.onde.go.th</domain>
         <trust-anchors>
             <certificates src="system" />
-            <certificates src="@raw/my_ca"/>
+            <certificates src="@raw/my_chained"/>
         </trust-anchors>
     </domain-config>
    
